fix: remove block invisible

--- a/blocks/bicycles/__card/bicycles__card.css
+++ b/blocks/bicycles/__card/bicycles__card.css
@@ -3,5 +3,10 @@
   padding-top: 66px;
   display: flex;
   flex-direction: column;
-  /* justify-content: start; */
+}
+
+@media screen and (max-width: 320px) {
+  .bicycles__card {
+    display: none;
+  }
 }
